@@ -79,6 +79,9 @@
 #define LINKER_VERSION_SEPARATOR '@'
 #define DUMMY_ALIAS_PREFIX       "__cexp__dummy_alias_"
 
+#define FLTFLAG_SECTSYMS        (1<<0)
+#define FLTFLAG_UNDFSYMS        (1<<1)
+
 #ifdef _PMBFD_
 
 static int cpyscn(Elf_Stream elfi, Elf_Stream elfo, Pmelf_Shtab shtab, Elf_Shdr *shdr)
@@ -124,7 +127,10 @@ int        elf64 = 0;
 
 	pmelf_set_errstrm(stderr);
 
-	elfi = pmelf_newstrm(ifilen, 0);
+	if ( ! (elfi = pmelf_newstrm(ifilen, 0)) ) {
+		goto cleanup;
+	}
+
 	if ( pmelf_getehdr(elfi, &ehdr) ) {
 		goto cleanup;
 	}
@@ -331,7 +337,7 @@ char *rval,*chpt;
 
 /* replicate cexp/bfdstuff.c behavior */
 static int
-symfilter(bfd *abfd, asymbol *s, int accept_sect_syms)
+symfilter(bfd *abfd, asymbol *s, int flags)
 {
 asection *sect = bfd_get_section(s);
 	/* drop TLS symbols for now; these should only
@@ -344,7 +350,7 @@ asection *sect = bfd_get_section(s);
 
 	if ( BSF_LOCAL & s->flags ) {
 		/* keep local symbols only if they are section symbols of allocated sections */
-		if ( accept_sect_syms && (BSF_SECTION_SYM & s->flags) && (SEC_ALLOC & bfd_get_section_flags(abfd,sect)) ) {
+		if ( (FLTFLAG_SECTSYMS & flags) && (BSF_SECTION_SYM & s->flags) && (SEC_ALLOC & bfd_get_section_flags(abfd,sect)) ) {
 			return 1;
 		} else {
 			return 0;
@@ -358,7 +364,7 @@ asection *sect = bfd_get_section(s);
 		 * case when loading the symbol table e.g. on a
 		 * linux platform.)
 		 */
-		return bfd_asymbol_value(s) && (BSF_FUNCTION & s->flags);
+		return (FLTFLAG_UNDFSYMS & flags) || (bfd_asymbol_value(s) && (BSF_FUNCTION & s->flags));
 	}
 	return 1;
 }
@@ -421,10 +427,10 @@ int							rval=1;
 char						*ifilen,*ofilen = 0;
 int							gensrc=0;
 int							dumparch=0;
-int							sectsyms=0;
+int                         fltflags=0;
 
 	/* scan options */
-	while ( (i=getopt(argc, argv, "ahpszC")) > 0 ) {
+	while ( (i=getopt(argc, argv, "ahpszCU")) > 0 ) {
 		switch (i) {
 			case 'h': usage(argv[0]); exit(0);
 
@@ -435,7 +441,8 @@ int							sectsyms=0;
 
 			case 'C': gensrc   = 1; break;
 			case 'a': dumparch = 1; break;
-			case 's': sectsyms = 1; break;
+			case 's': fltflags |= FLTFLAG_SECTSYMS; break;
+			case 'U': fltflags |= FLTFLAG_UNDFSYMS; break;
 		}
 	}
 
@@ -536,10 +543,10 @@ int							sectsyms=0;
 
 		fprintf(ofeil,"/* THIS FILE WAS AUTOMATICALLY GENERATED BY xsyms -- DO NOT EDIT */\n");
 		fprintf(ofeil,"#include <cexpsyms.h>\n");
-		if ( sectsyms )
+		if ( (FLTFLAG_SECTSYMS & fltflags) )
 			printf("/* THIS FILE WAS AUTOMATICALLY GENERATED BY xsyms -- DO NOT EDIT */\n");
 		for ( i=0; i<nsyms; i++ ) {
-			if ( !symfilter(ibfd, isyms[i], sectsyms) )
+			if ( !symfilter(ibfd, isyms[i], fltflags) )
 				continue;
 			getsname(ibfd, isyms[i], &stripped);
 
@@ -558,7 +565,7 @@ int							sectsyms=0;
 			int sz = 0;
 			unsigned long f = isyms[i]->flags;
 
-			if ( !symfilter(ibfd, isyms[i], sectsyms) )
+			if ( !symfilter(ibfd, isyms[i], fltflags) )
 				continue;
 
 			sname = getsname(ibfd, isyms[i], &stripped);
